--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,6 @@
 @media only screen and (max-width: 1100px) {
-  .wrapper { width: 90%; }
+  .wrapper { width: 90%;
+  }
   #social {
     position: absolute;
     top: 82px;
@@ -10,7 +11,13 @@
 }
 
 @media only screen and (max-width: 900px) {
-  .wrapper { width: 90%; }
+  body {
+    font-size: 85%;
+  }
+  #logo h1 {
+    height: 35px;
+    width:  35px;
+  }
 }
 
 @media only screen and (max-width: 750px) {
