--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,6 +18,9 @@
     height: 35px;
     width:  35px;
   }
+  #logo h2 {
+    font-size: 2.2em;
+  }
 }
 
 @media only screen and (max-width: 750px) {
