--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,6 +24,12 @@
   #social {
     top: 72px;
   }
+  .col-3 p {
+    column-rule: 1px dotted #ccc;
+    column-gap: 1.5em;
+    column-count: 2;
+  }
+
 }
 
 @media only screen and (max-width: 750px) {
