--- a/css/responsive.css
+++ b/css/responsive.css
@@ -31,5 +31,17 @@
 }
 
 @media only screen and (max-width: 750px) {
-  .wrapper { width: 90%; }
+  #navbar nav a {
+    font-size: 0.9em;
+  }
+  .col-3 p {
+    column-rule: 1px dotted #ccc;
+    column-gap: 1.5em;
+    column-count: 1;
+  }  
+  .col-1 .col-2 .col-3 {
+    width: 100%;
+    margin-left: 0;
+    float: none;
+  }
 }
